--- a/budgy_app/android/app/src/main/AndroidManifest.xml
+++ b/budgy_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="budgy_app"
+        android:label="Budgy"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
