--- a/budgy_app/pubspec.yaml
+++ b/budgy_app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   hooks_riverpod:
   flutter_launcher_icons: 
   google_fonts:
+  flutter_multi_formatter:
+  fl_chart: ^0.60.0
 
 
   # The following adds the Cupertino Icons font to your application.
