--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Budgy Release
+name: Flutter Mobile Release
 
 on:
   push:
@@ -15,71 +15,65 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout code
+      # Checkout the repository
       - uses: actions/checkout@v4
 
-      # Install Flutter
+      # Install Flutter SDK
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.24.2'
 
-      # Get app version from pubspec.yaml (safe for GitHub tags)
-      - name: Get version from pubspec.yaml
-        id: get_version
-        run: |
-          RAW_VERSION=$(grep '^version:' pubspec.yaml | sed 's/version: //')
-          SAFE_TAG="v${RAW_VERSION//+/-}"  # Replace '+' with '-'
-          echo "TAG=$SAFE_TAG" >> $GITHUB_ENV
-          echo "RAW_VERSION=$RAW_VERSION" >> $GITHUB_ENV
-          echo "Version from pubspec.yaml: $RAW_VERSION (tag: $SAFE_TAG)"
-        working-directory: ./budgy_app
-
-      # Prepare project
-      - name: Clean project
+      # Clean Flutter project
+      - name: Clean Flutter Project
         run: flutter clean
         working-directory: ./budgy_app
 
+      # Install dependencies
       - name: Install dependencies
         run: flutter pub get
         working-directory: ./budgy_app
 
+      # Format Dart files
       - name: Format Dart files
         run: dart format --set-exit-if-changed . || true
         working-directory: ./budgy_app
 
-      - name: Analyze source
+      # Analyze project source
+      - name: Analyze project source
         run: flutter analyze
         working-directory: ./budgy_app
 
-      # Build APK
-      - name: Build release APK
+      # Build APK for Android
+      - name: Build Android APK
         run: flutter build apk --release
         working-directory: ./budgy_app
 
-      # Rename APK for release
-      - name: Rename APK
-        run: mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/budgy.apk
-        working-directory: ./budgy_app
+      # Delete existing release if it exists
+      - name: Delete Existing Release
+        run: |
+          gh release delete v0.0.1 -y || echo "Release does not exist, continuing..."
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Create GitHub Release
-      - name: Create Release
+      - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ env.TAG }}             # Safe tag
-          release_name: Budgy v${{ env.RAW_VERSION }}  # Original version
+          tag_name: v0.0.1
+          release_name: "Release v0.0.1"
           draft: false
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Upload APK to Release
-      - name: Upload APK
+      - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: budgy_app/build/app/outputs/flutter-apk/budgy.apk
-          asset_name: budgy.apk
+          asset_path: budgy_app/build/app/outputs/apk/release/app-release.apk
+          asset_name: app-release.apk
           asset_content_type: application/vnd.android.package-archive
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
